# student-information-system

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
db/init/: schema.sql
docs/: CONTRIBUTING.md  INSTALL.md  MANUAL.md
include/: Database.hpp  Menu.hpp  Student.hpp  StudentRepository.hpp
src/: Database.cpp  Menu.cpp  StudentRepository.cpp  main.cpp
